Quartz sync: Aug 20, 2024, 12:41 AM

--- a/content/Действующие лица/Амн/Велианна Фароу.md
+++ b/content/Действующие лица/Амн/Велианна Фароу.md
@@ -6,4 +6,20 @@ location:
 gender: Ж
 ---
 
+> [!infobox]
+> 
+> ## Велианна Фароу
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | Амн |
+> | Раса | Человек |
+> | Пол | Ж |
+> | Организация | Нет данных |
+> | Статус | Нет данных |
+
+
 Некоторое время под этим именем числилась [[Мирай Стелмейн]]. 
