--- a/content/Действующие лица/Божества/Баал.md
+++ b/content/Действующие лица/Божества/Баал.md
@@ -1,11 +1,27 @@
 ---
-aliases:
+aliases: 
 type: Персонаж
-location: 
+location:
+  - Внешние планы
 race:
   - Божество
 gender: М
 organisation:
   - Фаерунский пантеон
-dead:
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Баал
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | Внешние планы |
+> | Раса | Божество |
+> | Пол | М |
+> | Организация | Фаерунский пантеон |
+> | Статус | Жив(а) |
