--- a/content/Действующие лица/Божества/Гонд.md
+++ b/content/Действующие лица/Божества/Гонд.md
@@ -11,14 +11,33 @@ aliases:
   - Повелитель Всех Кузнецов
   - Гонда
 type: Персонаж
-location: 
+location:
+  - Внешние планы
+  - Вандерхоум (демиплан)
 race:
   - Божество
 gender: М
 organisation:
   - Фаерунский пантеон
-dead:
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Гонд
+> 
+> ![[Гонд.webp]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Зионил, Небелун, Аранлаэрус, Балатенг, Даэросдэрос, Кланнауда, Мрангор, Таттабу, Повелитель Всех Кузнецов|
+> | Местонахождение | Внешние планы,Вандерхоум (демиплан) |
+> | Раса | Божество |
+> | Пол | М |
+> | Организация | Фаерунский пантеон |
+> | Статус | Жив(а) |
 
 Гонд в Забытых Королевствах — среднее божество ремёсел и кузнечного дела. Также известен как **Повелитель Всех Кузнецов, Чудотворец, Зионил**. Гонд преобразует идеи в конкретную форму и вдохновляет смертных на создание нового. Он заботится только о процессе творения, мало обращая внимание на последствия выпуска своих изобретений в мир. Гонд не противник магии, но рассматривает её просто как ещё одно средство для создания новых изобретений. 
 
