--- a/content/Действующие лица/Божества/Мурена.md
+++ b/content/Действующие лица/Божества/Мурена.md
@@ -7,5 +7,21 @@ location:
 race:
   - Божество
 gender: Ж
-organisation:
+organisation: 
+dead:
 ---
+
+> [!infobox]
+> 
+> ## Мурена
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Муреной,Мурену |
+> | Местонахождение | Нет данных |
+> | Раса | Божество |
+> | Пол | Ж |
+> | Организация | Нет данных |
+> | Статус | Нет данных  |
