--- a/content/Действующие лица/Божества/Ссет.md
+++ b/content/Действующие лица/Божества/Ссет.md
@@ -3,14 +3,34 @@ aliases:
   - Скользящий Высший
   - Ссета
   - Ссету
+  - Варэи
+  - Мерршаулк
+  - Ссстасинсс
+  - Сет
 type: Персонаж
-location: 
+location:
+  - Внешние планы
+  - Бездна
 race:
   - Божество
 gender: М
-organisation: []
+organisation:
 ---
 
+> [!infobox]
+> 
+> ## Ссет
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Скользящий Высший,Ссета,Ссету,Варэи,Мерршаулк,Ссстасинсс,Сет |
+> | Местонахождение | Внешние планы,Бездна |
+> | Раса | Божество |
+> | Пол | М |
+> | Организация | Нет данных |
+> | Статус | Нет данных |
 
 Так же известен как Скользящий Высший.
 
