--- a/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Белинн Стелмейн.md
+++ b/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Белинн Стелмейн.md
@@ -12,9 +12,25 @@ location:
 race:
   - Человек
 gender: Ж
-Персонажorganisation:
+organisation:
   - "[[Совет Четырёх]]"
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Белинн Стелмейн
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Белинн,Герцогиня,мать Мирай,Матушка |
+> | Местонахождение | [[Врата Бальдура]],[[Верхний город]],Поместье Стелмейн |
+> | Раса | Человек |
+> | Пол | Ж |
+> | Организация | [[Совет Четырёх]] |
+> | Статус | Жив(а) |
 
 Герцог Белинн Стелмейн - одним из членов [[Совет Четырёх|Совета Четырех]] в конце #XV XV века ЛД. Она явдяется расчётливым бизнесменом.
 
