--- a/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Гаксилион Труд.md
+++ b/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Гаксилион Труд.md
@@ -10,7 +10,26 @@ gender: М
 organisation:
   - "[[Дозор|Офицеры Врат Бальдура]]"
   - "[[Правительство Врат Бальдура]]"
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Гаксилион Труд
+> 
+> ![[Гаксилион Труд.jpeg]]
+>
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | [[Верхний город]],[[Врата Бальдура]] |
+> | Раса | Человек |
+> | Пол | М |
+> | Организация | [[Дозор\|Офицеры Врат Бальдура]],[[Правительство Врат Бальдура]] |
+> | Статус | Жив(а) |
+
 
 
 ![[80e961eb397446955d1d16bbfdbe7bd5.jpeg|150|center]]
