--- a/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Джедрен Хиллер.md
+++ b/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Джедрен Хиллер.md
@@ -11,7 +11,24 @@ gender: М
 organisation:
   - "[[Дозор|Офицеры Врат Бальдура]]"
   - "[[Правительство Врат Бальдура]]"
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Джедрен Хиллер
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | [[Врата Бальдура]],[[Верхний город]],[[Ширь]] |
+> | Раса | Человек |
+> | Пол | М |
+> | Организация | [[Дозор\|Офицеры Врат Бальдура]],[[Правительство Врат Бальдура]] |
+> | Статус | Жив(а) |
+
 
 
 
