--- a/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Диллард Портир.md
+++ b/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Диллард Портир.md
@@ -12,8 +12,25 @@ gender: М
 organisation:
   - "[[Совет Четырёх]]"
   - "[[Правительство Врат Бальдура]]"
+dead: false
 ---
-![[def1921bcf23accb938fe8eb4187f569.png|150]]
+
+> [!infobox]
+> 
+> ## Диллард Портир
+> 
+> ![[Диллард Портир.png]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Дилларда Портира,Дилларду Портиру |
+> | Местонахождение | [[Верхний город]],[[Врата Бальдура]] |
+> | Раса | Человек |
+> | Пол | М |
+> | Организация | [[Совет Четырёх]],[[Правительство Врат Бальдура]] |
+> | Статус | Жив(а) |
 
 Диллард Портир — невысокий дородный мужчина 60-ти лет. Когда-то чёрные волосы герцога изрядно поредели и посветлели, поэтому он носит потрепанный парик — больше по привычке, чем из-за тщеславия. В конц
 е #XV века ЛД, Диллард Портир был самым старшим из Герцогов и по этой причине являлся их неофициальным лидером. В Год убийств в Нартексе, #1480х/1482ЛД, Диллард также пережил кризис во Вратах Балдура, завершённый воскрешением Баала.
