--- a/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Имбралим Скунд.md
+++ b/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Имбралим Скунд.md
@@ -8,9 +8,26 @@ race:
 gender: М
 organisation:
   - "[[Парламент Пэров]]"
+dead: false
 ---
 
-![[ImbralymSkoond.jpg|150]]
+> [!infobox]
+> 
+> ## Имбралим Скунд
+> 
+> ![[Ибрагим Скунд.jpg]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | [[Врата Бальдура]] |
+> | Раса | Человек |
+> | Пол | М |
+> | Организация | [[Парламент Пэров]] |
+> | Статус | Жив(а) |
+
 
 Алчный, безнравственный, начинающий волшебник, весьма изящен, обладает обаятельной, мрачной, загадочно привлекательной внешностью. До тех пор, пока он не открыл в себе способности к магическим искусствам, Скунд был простым учителем танцев в городе Аскатла. Благодаря открывшемуся таланту, в нём зародилась мечта о несметных богатствах, на которые только может расчитывать преуспевающий волшебник. Вскоре, дабы найти хорошо подкованного спонсора среди влиятельной знати Врат Балдура, он покинул свой дом. Благодаря своему обаянию, таланту к магии и очевидно безнравственному поведению, Скунд вскоре стал объектом пристального внимания герцога [[Торлин Сильвершилд|Силвершилда]]. 
 
