--- a/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Коран.md
+++ b/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Коран.md
@@ -6,14 +6,31 @@ type: Персонаж
 location:
   - "[[Врата Бальдура]]"
   - "[[Верхний город]]"
-race: Эльф
+race:
+  - Эльф
 gender: М
 organisation:
   - "[[Парламент Пэров]]"
   - "[[Герои Шири (заполнить)]]"
+dead: false
 ---
 
-![[Coran_5e.jpg|150]]
+> [!infobox]
+> 
+> ## Коран
+> 
+> ![[Коран.jpg]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Корана,Корану |
+> | Местонахождение | [[Врата Бальдура]],[[Верхний город]] |
+> | Раса | Эльф |
+> | Пол | М |
+> | Организация | [[Парламент Пэров]],[[Герои Шири (заполнить)]] |
+> | Статус | Жив(а) |
 
 Коран — эльф-авантюрист, в прошлом известный боец и плут, сейчас отошел от дел и позиционирует себя как торговец и информационный посредник, появляясь на патрицианских кутежах как приглашённая звезда с мрачной репутацией. Корану нравится быть в курсе событий и играть роль язвительного всезнающего наблюдателя.
  
