--- a/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Линта Мур.md
+++ b/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Линта Мур.md
@@ -2,15 +2,32 @@
 aliases: 
 type: Персонаж
 location:
-  - "[[Нижний город (заполнить)|Нижний город]]"
+  - "[[Нижний город|Нижний город]]"
   - "[[Врата Бальдура]]"
-race: Человек
+race:
+  - Человек
 gender: Ж
 organisation:
   - "[[Дозор]]"
+dead: false
 ---
 
-![[3058e8efee69c47c4d1d9a91a36d52a7.jpg|150]]
+> [!infobox]
+> 
+> ## Линта Мур
+> 
+> ![[Линта Мур.jpg]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | [[Нижний город\|Нижний город]],[[Врата Бальдура]] |
+> | Раса | Человек |
+> | Пол | Ж |
+> | Организация | [[Дозор]] |
+> | Статус | Жив(а) |
 Сержант [[Дозор|Дозора]] начиная с #1470х/1479ЛД.
 Мур командует отрядом из тридцати щитоносцев и трех сармаров. У нее репутация смертоносной фехтовальщицы, способной убить при исполнении служебного долга.
 
