--- a/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Оллин Рахт.md
+++ b/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Оллин Рахт.md
@@ -9,6 +9,24 @@ location:
 race:
   - Полуэльф
 gender: М
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Оллин Рахт
+> 
+> ![[Оллин Рахт.png]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Оллин |
+> | Местонахождение | [[Врата Бальдура]],[[Верхний город]],Поместье Стелмейн |
+> | Раса | Полуэльф |
+> | Пол | М |
+> | Организация | Нет данных |
+> | Статус | Жив(а) |
 
 Теперь Оллин - глава персонала виллы и личный помощник герцогини. Он выполняет свою работу с гордостью и пользуется огромным уважением в Верхнем городе. Хотя ему множество раз предлагали повышение до секретаря, однако хлопоты по особняку уже давно стали его хобби. Его роль усложнилась после Инцидента, когда Герцогиня стала более отстраненной и страдала от частых головных болей. Хотя Мирай сейчас и взяла на себя работу с публикой, но многая бюрократия легла на его плечи.
