--- a/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Таламра Вантампур.md
+++ b/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Таламра Вантампур.md
@@ -11,9 +11,25 @@ gender: Ж
 organisation:
   - "[[Дозор|Офицеры Врат Бальдура]]"
   - "[[Правительство Врат Бальдура]]"
+dead: false
 ---
 
-![[Thalamra.jpg|150]]
+> [!infobox]
+> 
+> ## Таламра Вантампур
+> 
+> ![[Таламра Вантампур.jpg]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Таламра |
+> | Местонахождение | [[Врата Бальдура]],[[Верхний город]] |
+> | Раса | Человек |
+> | Пол | Ж |
+> | Организация | [[Дозор\|Офицеры Врат Бальдура]],[[Правительство Врат Бальдура]] |
+> | Статус | Жив(а) |
 
 [[Мастер над Водными и Подземными Путями]] начиная с #1480х/1480ЛД 
 
