--- a/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Торлин Сильвершилд.md
+++ b/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Торлин Сильвершилд.md
@@ -10,9 +10,27 @@ gender: М
 organisation:
   - "[[Совет Четырёх]]"
   - "[[Правительство Врат Бальдура]]"
+dead:
 ---
 
-![[TorlinSilvershield.jpg|150]]
+
+
+> [!infobox]
+> 
+> ## Торлин Сильвершилд
+> 
+> ![[Торлин Сильвершилд.jpg]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Торлин |
+> | Местонахождение | Неизвестно |
+> | Раса | Человек |
+> | Пол | М |
+> | Организация | [[Совет Четырёх]],[[Правительство Врат Бальдура]] |
+> | Статус | Нет данных |
 
 Торлин Сильвершилд был одним из [[Совет Четырёх|Великих Герцогов]] в #1470х/1479ЛД.
 
