--- a/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Ульдер Рейвенгард.md
+++ b/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Ульдер Рейвенгард.md
@@ -25,4 +25,22 @@ gender: М
 organisation:
   - "[[Совет Четырёх]]"
   - "[[Правительство Врат Бальдура]]"
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Ульдер Рейвенгард
+> 
+> ![[Ульдер Рейвенгард 1.png]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Ульдер,Рейвенгард |
+> | Местонахождение | [[Врата Бальдура]],[[Верхний город]] |
+> | Раса | Человек |
+> | Пол | М |
+> | Организация | [[Совет Четырёх]],[[Правительство Врат Бальдура]] |
+> | Статус | Жив(а) |
