--- a/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Эрл Наморран.md
+++ b/content/Действующие лица/Врата Бальдура/Жители Верхнего города/Эрл Наморран.md
@@ -4,17 +4,32 @@ aliases:
 type: Персонаж
 location:
   - "[[Врата Бальдура]]"
-  - "[[Нижний город (заполнить)|Нижний город]]"
+  - "[[Нижний город|Нижний город]]"
 race:
   - Человек
 gender: М
 organisation:
   - "[[Правительство Врат Бальдура]]"
   - "[[Дозор|Офицеры Врат Бальдура]]"
+dead: false
 ---
 
-
-![[Namorran.jpg|150]]
+> [!infobox]
+> 
+> ## Эрл Наморран
+> 
+> ![[Эрл Наморран.jpg]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Наморран |
+> | Местонахождение | [[Врата Бальдура]],[[Нижний город]] |
+> | Раса | Человек |
+> | Пол | М |
+> | Организация | [[Правительство Врат Бальдура]],[[Дозор\|Офицеры Врат Бальдура]] |
+> | Статус | Жив(а) |
 
 Управляющий Портом Врат Балдура на момент #1480х/1483ЛД 
 
