--- a/content/Действующие лица/Врата Бальдура/Жители Внешнего города/Дамар.md
+++ b/content/Действующие лица/Врата Бальдура/Жители Внешнего города/Дамар.md
@@ -5,10 +5,27 @@ aliases:
 type: Персонаж
 location:
   - "[[Врата Бальдура]]"
-  - "[[Внешний город (заполнить)|Внешний город]]"
+  - "[[Внешний город]]"
 race:
   - Дворф
 gender: М
-organisation:
+organisation: 
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Дамар
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Дамару,Дамара |
+> | Местонахождение | [[Врата Бальдура]],[[Внешний город]] |
+> | Раса | Дворф |
+> | Пол | М |
+> | Организация | Нет данных |
+> | Статус | Жив(а) |
+
 Названый отец [[Руб]], кузнец.
