--- a/content/Действующие лица/Врата Бальдура/Жители Внешнего города/Джин.md
+++ b/content/Действующие лица/Врата Бальдура/Жители Внешнего города/Джин.md
@@ -5,10 +5,29 @@ aliases:
 type: Персонаж
 location:
   - "[[Врата Бальдура]]"
-  - "[[Внешний город (заполнить)|Внешний город]]"
+  - "[[Внешний город]]"
+  - Таверна "Потрошитель"
 race:
   - Орк
 gender: М
 organisation:
+  - "[[Гильдия]]"
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Джин
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Джина,Джину |
+> | Местонахождение | [[Врата Бальдура]],[[Внешний город]],Таверна "Потрошитель" |
+> | Раса | Орк |
+> | Пол | М |
+> | Организация | [[Гильдия]] |
+> | Статус | Жив(а) |
+> 
 Отец [[Лили]]. Является начальником [[Руб]].
