--- a/content/Действующие лица/Врата Бальдура/Жители Внешнего города/Лили.md
+++ b/content/Действующие лица/Врата Бальдура/Жители Внешнего города/Лили.md
@@ -1,11 +1,29 @@
 ---
 aliases: 
 type: Персонаж
-location: 
+location:
   - "[[Врата Бальдура]]"
-  - "[[Внешний город (заполнить)|Внешний город]]"
-race: Орк
+  - "[[Внешний город]]"
+  - Таверна "Потрошитель"
+race:
+  - Орк
 gender: Ж
-organisation:
+organisation: 
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Лили
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | [[Врата Бальдура]],[[Внешний город]],Таверна "Потрошитель" |
+> | Раса | Орк |
+> | Пол | Ж |
+> | Организация | Нет данных |
+> | Статус | Жив(а) |
 Дочка [[Джин|Джина]], школьного возраста. Неплохо ладит с [[Руб]].
