--- a/content/Действующие лица/Врата Бальдура/Жители Внешнего города/Мистер Печенька.md
+++ b/content/Действующие лица/Врата Бальдура/Жители Внешнего города/Мистер Печенька.md
@@ -7,5 +7,21 @@ race:
   - Неизвестно
 gender: Неизвестно
 organisation:
-  - "[[Гильдия]]"
+  - Неизвестно
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Мистер Печенька
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | Неизвестно |
+> | Раса | Неизвестно |
+> | Пол | Неизвестно |
+> | Организация | Неизвестно |
+> | Статус | Жив(а) |
