--- a/content/Действующие лица/Врата Бальдура/Жители Внешнего города/Рильса Раель.md
+++ b/content/Действующие лица/Врата Бальдура/Жители Внешнего города/Рильса Раель.md
@@ -4,14 +4,31 @@ aliases:
 type: Персонаж
 location:
   - "[[Врата Бальдура]]"
-  - "[[Внешний город (заполнить)|Внешний город]]"
+  - "[[Внешний город]]"
 race:
   - Человек
 gender: Ж
 organisation:
   - "[[Гильдия]]"
-dead:
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Рильса Раель
+> 
+> ![[Рильса Раель.png]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Раэль |
+> | Местонахождение | [[Врата Бальдура]],[[Внешний город]] |
+> | Раса | Человек |
+> | Пол | Ж |
+> | Организация | [[Гильдия]] |
+> | Статус | Жив(а) |
 
  Когда [[Рильса Раель]] присоединилась к [[Гильдия|Гильдии]], ей было некуда больше обратиться. [[Пылающий Кулак]] повесил ее отца за укрывательство дяди, которого разыскивали наемники. Чтобы прокормить Раель, ее красивая мать стала любовницей лорда. Когда его жена узнала о ее существовании, она потребовала, чтобы мать Раэль заключили в Морскую башню Балдурана, где женщина и скончалась в то время, как ее любовник остался безнаказанным. Оставшись совсем одна, Раэль присоединилась к банде в Норчапель, где ее смешанная тетирская и калишитская кровь и знания языка позволили привлечь Маленький Калимшан под влияние [[Гильдия|Гильдии]]. 
  
