--- a/content/Действующие лица/Врата Бальдура/Жители Нижнего города/Джинджер.md
+++ b/content/Действующие лица/Врата Бальдура/Жители Нижнего города/Джинджер.md
@@ -3,12 +3,28 @@ aliases:
 type: Персонаж
 location:
   - "[[Врата Бальдура]]"
-  - "[[Нижний город (заполнить)|Нижний город]]"
+  - "[[Нижний город]]"
   - Особняк Кляйн
 race:
   - Человек
 gender: Ж
 organisation: 
-dead:
+dead: false
 ---
- Работает горничной в особняке Кляйн. Часто выполняет поручения [[Тори Кляйн]].
+ 
+> [!infobox]
+> 
+> ## Джинджер
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | [[Врата Бальдура]],[[Нижний город]],Особняк Кляйн |
+> | Раса | Человек |
+> | Пол | Ж |
+> | Организация | Нет данных |
+> | Статус | Жив(а) |
+
+Работает горничной в особняке Кляйн. Часто выполняет поручения [[Тори Кляйн]].
