--- a/content/Действующие лица/Врата Бальдура/Жители Нижнего города/Лиара Портир.md
+++ b/content/Действующие лица/Врата Бальдура/Жители Нижнего города/Лиара Портир.md
@@ -2,7 +2,7 @@
 aliases: 
 type: Персонаж
 location:
-  - "[[Нижний город (заполнить)|Нижний город]]"
+  - "[[Нижний город]]"
   - "[[Форт Белуариан (заполнить)]]"
 race: Человек
 gender: Ж
@@ -10,7 +10,22 @@ organisation:
   - "[[Пылающий Кулак]]"
 ---
 
-![[Liara_Portyr.jpg|150]]
+> [!infobox]
+> 
+> ## Лиара Портир
+> 
+> ![[Лиара Портир.jpg]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | [[Нижний город]],[[Форт Белуариан (заполнить)]] |
+> | Раса | Человек |
+> | Пол | Ж |
+> | Организация | [[Пылающий Кулак]] |
+> | Статус | Нет данных |
 
 Лиара Портир была командиром [[Форт Белуариан (заполнить)|Форта Белуариан]] и самым высокопоставленным членом [[Пылающий Кулак|Пылающего Кулака]] в Чульте в конце #XV века ЛД. Она подчинялась только [[Совет Четырёх|Великому Герцогу]] [[Ульдер Рейвенгард|Ульдеру Равенгарду]]. Родилась в обеспеченной семье Портир, племянница великого герцога [[Диллард Портир|Дилларда Портира]].
 
