--- a/content/Действующие лица/Врата Бальдура/Жители Нижнего города/Фауст Кляйн.md
+++ b/content/Действующие лица/Врата Бальдура/Жители Нижнего города/Фауст Кляйн.md
@@ -6,11 +6,29 @@ aliases:
   - папиньку
 type: Персонаж
 location:
-  - "[[Нижний город (заполнить)|Нижний город]]"
+  - "[[Нижний город]]"
   - "[[Врата Бальдура]]"
-race: Человек
+race:
+  - Человек
 gender: М
 organisation:
   - "[[Парламент Пэров]]"
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Фауст Кляйн
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| папинька |
+> | Местонахождение | [[Нижний город]],[[Врата Бальдура]] |
+> | Раса | Человек |
+> | Пол | М |
+> | Организация | [[Парламент Пэров]] |
+> | Статус | Жив(а) |
+
 Отец [[Тори Кляйн]], души в ней не чает.
