--- a/content/Действующие лица/Врата Бальдура/Персонажи Врат/Ксандр.md
+++ b/content/Действующие лица/Врата Бальдура/Персонажи Врат/Ксандр.md
@@ -9,8 +9,28 @@ location:
 gender: М
 race:
   - Полуэльф
-organisation: []
+organisation:
+  - "[[Наёмники Джарлакса]]"
+  - "[[Легион Смерти]]"
+dead: false
 ---
-Личность из Амна. До событий Хаммера 1483, пребывал в организации [[Легион Смерти]]. 
 
-Скорее всего учавстовал в последней его м
+> [!infobox]
+> 
+> ## Ксандр
+> 
+> ![[ksantok.png]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Ксандра,Ксандру |
+> | Местонахождение | Амн,[[Врата Бальдура]] |
+> | Раса | Полуэльф |
+> | Пол | М |
+> | Организация | [[Наёмники Джарлакса]],[[Легион Смерти]] |
+> | Статус | Жив(а) |
+
+
+Личность из Амна. До событий Хаммера 1483, пребывал в организации [[Легион Смерти]]. 
