--- a/content/Действующие лица/Врата Бальдура/Персонажи Врат/Мирай Стелмейн.md
+++ b/content/Действующие лица/Врата Бальдура/Персонажи Врат/Мирай Стелмейн.md
@@ -8,7 +8,25 @@ location:
 gender: Ж
 race:
   - Человек
-organisation: []
+organisation:
+  - "[[Наёмники Джарлакса]]"
+dead: false
 ---
 
+> [!infobox]
+> 
+> ## Мирай Стелмейн
+> 
+> ![[Мирай Стелмейн.png]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Мирай |
+> | Местонахождение | [[Верхний город]],[[Врата Бальдура]] |
+> | Раса | Человек |
+> | Пол | Ж |
+> | Организация | [[Наёмники Джарлакса]] |
+> | Статус | Жив(а) |
 Дочь [[Белинн Стелмейн]]. В последние пару лет часто заменяла её. Не столь давно [[Смерть Мирай|умерла]] и теперь работает на [[Джарлакс|Джарлакса]].
