--- a/content/Действующие лица/Врата Бальдура/Персонажи Врат/Руб.md
+++ b/content/Действующие лица/Врата Бальдура/Персонажи Врат/Руб.md
@@ -1,12 +1,32 @@
 ---
 type: Персонаж
 location:
-  - "[[Внешний город (заполнить)|Внешний город]]"
+  - "[[Внешний город]]"
   - "[[Врата Бальдура]]"
 gender: Ж
 race:
   - Эльф
 organisation:
   - "[[Гильдия]]"
+  - "[[Наёмники Джарлакса]]"
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Руб
+> 
+> ![[Руб.png]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | [[Внешний город]],[[Врата Бальдура]] |
+> | Раса | Эльф |
+> | Пол | Ж |
+> | Организация | [[Гильдия]],[[Наёмники Джарлакса]] |
+> | Статус | Жив(а) |
+
 Раньше работала на [[Мистер Печенька|Мистера Печеньку]], сейчас на [[Джарлакс|Джарлакса]].
