--- a/content/Действующие лица/Врата Бальдура/Персонажи Врат/Тори Кляйн.md
+++ b/content/Действующие лица/Врата Бальдура/Персонажи Врат/Тори Кляйн.md
@@ -4,12 +4,30 @@ aliases:
 type: Персонаж
 location:
   - "[[Врата Бальдура]]"
-  - "[[Нижний город (заполнить)|Нижний город]]"
+  - "[[Нижний город]]"
 gender: Ж
 race:
   - Порчекровный
-organisation: []
+organisation:
+  - "[[Наёмники Джарлакса]]"
+dead: false
+---
+
+> [!infobox]
+> 
+> ## Тори Кляйн
+> 
+> ![[Тори Кляйн.png]]
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Тори |
+> | Местонахождение | [[Врата Бальдура]],[[Нижний город]] |
+> | Раса | Порчекровный |
+> | Пол | Ж |
+> | Организация | [[Наёмники Джарлакса]] |
+> | Статус | Жив(а) |
 ---
 Дочь [[Фауст Кляйн|Фауста Кляйн]] и [[Маргарита Кляйн|Маргариты Кляйн]]. Судя по всему, имеет давнюю связь с [[Баал|Баалом]]
-
-Тори сказала, что узнала язык, общаясь 
