--- a/content/Материалы/Скрипты/Обновление таблиц.md
+++ b/content/Материалы/Скрипты/Обновление таблиц.md
@@ -8,7 +8,7 @@ const fileAndQuery = new Map([
   ], 
   [
     "Все персонажи игроков",
-    'Table date AS "Дата игры", fc-date AS "Дата в игре" From "Игры/Врата Бальдура/Хроники" SORT sessionNum DESC Limit 3',
+    'List From "Действующие лица/Врата Бальдура/Персонажи Врат" Where type = "Персонаж"',
   ],
   [
     "Готовые статьи",
@@ -25,6 +25,10 @@ const fileAndQuery = new Map([
   [
     "Хроники Врат Бальдура",
     'Table date AS "Дата игры", fc-date AS "Дата в игре",characters as "Участники", location as "Локации" From "Игры/Врата Бальдура/Хроники" SORT sessionNum asc',
+  ], 
+  [
+    "Жители особняка",
+    'Table race AS "Раса", location AS "Местонахождение" From "Действующие лица/Поместье Рейвентри"',
   ], 
 ]);
 
