--- a/content/Материалы/Таблицы/Готовые статьи.md
+++ b/content/Материалы/Таблицы/Готовые статьи.md
@@ -8,13 +8,14 @@
 | [[Лор/Существа/Чешуйчатые/Юань-ти/Общество юань-ти.md\|Общество юань-ти]]                                                                                      | Информация  |
 | [[Лор/Существа/Чешуйчатые/Юань-ти.md\|Юань-ти]]                                                                                                                | Информация  |
 | [[Материалы/Шаблоны/Информация.md\|Информация]]                                                                                                                | Информация  |
+| [[Лор/Локации/Бессмертная Андайн.md\|Бессмертная Андайн]]                                                                                                      | Локация     |
 | [[Лор/Локации/Врата Бальдура/Верхний город/Верхний город.md\|Верхний город]]                                                                                   | Локация     |
 | [[Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Высший Зал.md\|Высший Зал]]                                                                 | Локация     |
 | [[Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Зал Чудес.md\|Зал Чудес]]                                                                   | Локация     |
 | [[Лор/Локации/Врата Бальдура/Верхний город/Районы/Ширь/Статуя Возлюбленного Странника.md\|Статуя Возлюбленного Странника]]                                     | Локация     |
 | [[Лор/Локации/Врата Бальдура/Верхний город/Районы/Ширь.md\|Ширь]]                                                                                              | Локация     |
-| [[Лор/Локации/Врата Бальдура/Нижний город/Корабль Аларика.md\|Корабль Аларика]]                                                                                | Локация     |
 | [[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]                                                                                               | Локация     |
+| [[Лор/Локации/Врата Бальдура/Нижний город/Корабль Аларика.md\|Корабль Аларика]]                                                                                | Локация     |
 | [[Лор/Локации/Лускан.md\|Лускан]]                                                                                                                              | Локация     |
 | [[Лор/Локации/Невервинтер.md\|Невервинтер]]                                                                                                                    | Локация     |
 | [[Лор/Локации/Острова Муншае.md\|Острова Муншае]]                                                                                                              | Локация     |
@@ -24,6 +25,7 @@
 | [[Лор/Организации/Альянс лордов.md\|Альянс лордов]]                                                                                                            | Организация |
 | [[Лор/Организации/Врата Бальдура/Гильдия.md\|Гильдия]]                                                                                                         | Организация |
 | [[Лор/Организации/Врата Бальдура/Дозор.md\|Дозор]]                                                                                                             | Организация |
+| [[Лор/Организации/Врата Бальдура/Наёмники Джарлакса.md\|Наёмники Джарлакса]]                                                                                   | Организация |
 | [[Лор/Организации/Врата Бальдура/Правительство/Верховный Констебль и Мастер над стенами (заполнить).md\|Верховный Констебль и Мастер над стенами (заполнить)]] | Организация |
 | [[Лор/Организации/Врата Бальдура/Правительство/Мастер над Водными и Подземными Путями.md\|Мастер над Водными и Подземными Путями]]                             | Организация |
 | [[Лор/Организации/Врата Бальдура/Правительство/Мастер над Монетой.md\|Мастер над Монетой]]                                                                     | Организация |
@@ -46,6 +48,7 @@
 | [[Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Хсс'тафи.md\|Дом Хсс'тафи]]                                                                                  | Организация |
 | [[Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Экстаминос.md\|Дом Экстаминос]]                                                                              | Организация |
 | [[Лор/Существа/Чешуйчатые/Юань-ти/Организации/Дом Эселемас.md\|Дом Эселемас]]                                                                                  | Организация |
+| [[Материалы/Шаблоны/Организация Вики.md\|Организация Вики]]                                                                                                    | Организация |
 | [[Материалы/Шаблоны/Организация.md\|Организация]]                                                                                                              | Организация |
 | [[Действующие лица/Амн/Велианна Фароу.md\|Велианна Фароу]]                                                                                                     | Персонаж    |
 | [[Действующие лица/Божества/Баал.md\|Баал]]                                                                                                                    | Персонаж    |
@@ -80,12 +83,12 @@
 | [[Действующие лица/Врата Бальдура/Персонажи Врат/Руб.md\|Руб]]                                                                                                 | Персонаж    |
 | [[Действующие лица/Врата Бальдура/Персонажи Врат/Тори Кляйн.md\|Тори Кляйн]]                                                                                   | Персонаж    |
 | [[Действующие лица/Врата Бальдура/Фессир.md\|Фессир]]                                                                                                          | Персонаж    |
-| [[Бипин\|Бипин]]                                                                                        | Персонаж    |
-| [[Гвилим\|Гвилим]]                                                                                      | Персонаж    |
-| [[Сангмин\|Сангмин]]                                                                                    | Персонаж    |
-| [[Селес\|Селес]]                                                                                        | Персонаж    |
-| [[Сол\|Сол]]                                                                                            | Персонаж    |
-| [[Фланн\|Фланн]]                                                                                        | Персонаж    |
+| [[Действующие лица/Долина Ледяного Ветра/Команда Селес/Бипин.md\|Бипин]]                                                                                       | Персонаж    |
+| [[Действующие лица/Долина Ледяного Ветра/Команда Селес/Гвилим.md\|Гвилим]]                                                                                     | Персонаж    |
+| [[Действующие лица/Долина Ледяного Ветра/Команда Селес/Сангмин.md\|Сангмин]]                                                                                   | Персонаж    |
+| [[Действующие лица/Долина Ледяного Ветра/Команда Селес/Селес.md\|Селес]]                                                                                       | Персонаж    |
+| [[Действующие лица/Долина Ледяного Ветра/Команда Селес/Сол.md\|Сол]]                                                                                           | Персонаж    |
+| [[Действующие лица/Долина Ледяного Ветра/Команда Селес/Фланн.md\|Фланн]]                                                                                       | Персонаж    |
 | [[Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Азария.md\|Азария]]                                                                                  | Персонаж    |
 | [[Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Ацереща.md\|Ацереща]]                                                                                | Персонаж    |
 | [[Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Вик Гральт.md\|Вик Гральт]]                                                                          | Персонаж    |
@@ -161,3 +164,4 @@
 | [[Игры/Врата Бальдура/Хроники/День 9. Званный ужин у семьи Кляйн и снова в особняк.md\|День 9. Званный ужин у семьи Кляйн и снова в особняк]]                  | Хроники     |
 | [[Игры/Шторм Короля Бурь/Хроники/Камни, охота и передача глаза.md\|Камни, охота и передача глаза]]                                                             | Хроники     |
 | [[Материалы/Шаблоны/Хроники Врата.md\|Хроники Врата]]                                                                                                          | Хроники     |
+| [[Материалы/Шаблоны/Хроники Шторм.md\|Хроники Шторм]]                                                                                                          | Хроники     |
