--- a/content/Материалы/Таблицы/Другие статьи.md
+++ b/content/Материалы/Таблицы/Другие статьи.md
@@ -1,10 +1,12 @@
 - [[Лор/Организации/Альянс лордов.md|Альянс лордов]]
 - [[Лор/Локации/Врата Бальдура/Общие локации/Бальдурские Ворота (заполнить).md|Бальдурские Ворота (заполнить)]]
 - [[Лор/Локации/Врата Бальдура/Верхний город/Районы/Храмовый квартал/Башня Рамазита (заполнить).md|Башня Рамазита (заполнить)]]
+- [[Лор/Локации/Бессмертная Андайн.md|Бессмертная Андайн]]
 - [[Лор/Существа/Чешуйчатые/Юань-ти/Быт юань-ти.md|Быт юань-ти]]
 - [[Лор/Локации/Врата Бальдура/Верхний город/Верхний город.md|Верхний город]]
 - [[Лор/Организации/Врата Бальдура/Правительство/Верховный Констебль и Мастер над стенами (заполнить).md|Верховный Констебль и Мастер над стенами (заполнить)]]
 - [[Лор/Существа/Чешуйчатые/Юань-ти/Виды юань-ти.md|Виды юань-ти]]
+- [[Лор/Локации/Врата Бальдура/Внешний город/Внешний город.md|Внешний город]]
 - [[Лор/Локации/Врата Бальдура/Внешний город/Внешний город (заполнить).md|Внешний город (заполнить)]]
 - [[Лор/Локации/Врата Бальдура/Нижний город/Восточный Путь (заполнить).md|Восточный Путь (заполнить)]]
 - [[Лор/Локации/Врата Бальдура/Врата Бальдура.md|Врата Бальдура]]
@@ -34,7 +36,9 @@
 - [[Лор/Организации/Врата Бальдура/Правительство/Мастер над Монетой.md|Мастер над Монетой]]
 - [[Лор/Организации/Врата Бальдура/Правительство/Мастер над Мостовыми (заполнить).md|Мастер над Мостовыми (заполнить)]]
 - [[Лор/Локации/Врата Бальдура/Общие локации/Морская Башня Бальдурана (заполнить).md|Морская Башня Бальдурана (заполнить)]]
+- [[Лор/Организации/Врата Бальдура/Наёмники Джарлакса.md|Наёмники Джарлакса]]
 - [[Лор/Локации/Невервинтер.md|Невервинтер]]
+- [[Лор/Локации/Врата Бальдура/Нижний город/Нижний город.md|Нижний город]]
 - [[Лор/Локации/Врата Бальдура/Нижний город/Нижний город (заполнить).md|Нижний город (заполнить)]]
 - [[Лор/Существа/Чешуйчатые/Юань-ти/Общество юань-ти.md|Общество юань-ти]]
 - [[Лор/Локации/Острова Муншае.md|Острова Муншае]]
@@ -46,10 +50,12 @@
 - [[Лор/События/Праздник Высокого Урожая.md|Праздник Высокого Урожая]]
 - [[Лор/Организации/Врата Бальдура/Правительство/Пристав Шири.md|Пристав Шири]]
 - [[Лор/Организации/Врата Бальдура/Пылающий Кулак.md|Пылающий Кулак]]
+- [[Лор/Существа/Чешуйчатые/Юань-ти/Расовая история.md|Расовая история]]
 - [[Лор/Существа/Чешуйчатые/Саррукхи/Расовая история саррукхов.md|Расовая история саррукхов]]
 - [[Лор/Существа/Чешуйчатые/Юань-ти/Расовая история юань-ти.md|Расовая история юань-ти]]
 - [[Лор/Локации/Врата Бальдура/Верхний город/Районы/Родовые поместья (заполнить).md|Родовые поместья (заполнить)]]
 - [[Лор/Организации/Культы/Рыцари Щита.md|Рыцари Щита]]
+- [[Лор/Существа/Чешуйчатые/Саррукхи.md|Саррукхи]]
 - [[Лор/Существа/Чешуйчатые/Саррукхи/Саррукхи.md|Саррукхи]]
 - [[Лор/Организации/Врата Бальдура/Свита Леди.md|Свита Леди]]
 - [[Лор/Организации/Врата Бальдура/Правительство/Совет Четырёх.md|Совет Четырёх]]
