--- a/content/Действующие лица/Врата Бальдура/Персонажи Врат/Гайдо Алигьери.md
+++ b/content/Действующие лица/Врата Бальдура/Персонажи Врат/Гайдо Алигьери.md
@@ -5,12 +5,29 @@ type: Персонаж
 location:
   - "[[Острова Муншае]]"
   - "[[Врата Бальдура]]"
-  - "[[Внешний город (заполнить)|Внешний город]]"
+  - "[[Внешний город]]"
 gender: М
 race:
   - Аасимар
-organisation: []
+organisation:
+  - "[[Наёмники Джарлакса]]"
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Гайдо Алигьери
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Гайдо |
+> | Местонахождение | [[Острова Муншае]],[[Врата Бальдура]],[[Внешний город]] |
+> | Раса | Аасимар |
+> | Пол | М |
+> | Организация | [[Наёмники Джарлакса]] |
+> | Статус | Жив(а) |
 
 Отец: Халдей Грокс
 Мать: Аларика Алигьери
