--- a/content/Материалы/Таблицы/Известные личности.md
+++ b/content/Материалы/Таблицы/Известные личности.md
@@ -13,15 +13,17 @@
 | [[Действующие лица/Местоположение неизвестно/Массирак.md\|Массирак]]                                          | <ul><li>Долина ледяного ветра</li><li>Неизвестно</li></ul>                                                                                                                                                                                                                  |
 | [[Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Вик Гральт.md\|Вик Гральт]]                         | <ul><li>Долина ледяного ветра</li><li>[[Лор/Локации/Невервинтер.md\|Невервинтер]]</li></ul>                                                                                                                                                                                |
 | [[Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Орнштейн Аддер Айнхард.md\|Орнштейн Аддер Айнхард]] | <ul><li>Долина ледяного ветра</li><li>[[Лор/Локации/Невервинтер.md\|Невервинтер]]</li></ul>                                                                                                                                                                                |
-| [[Бипин\|Бипин]]                                       | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
-| [[Гвилим\|Гвилим]]                                     | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
-| [[Сангмин\|Сангмин]]                                   | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
-| [[Селес\|Селес]]                                       | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
-| [[Сол\|Сол]]                                           | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
-| [[Фланн\|Фланн]]                                       | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
+| [[Действующие лица/Долина Ледяного Ветра/Команда Селес/Гвилим.md\|Гвилим]]                                    | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
+| [[Действующие лица/Долина Ледяного Ветра/Команда Селес/Сангмин.md\|Сангмин]]                                  | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
+| [[Действующие лица/Долина Ледяного Ветра/Команда Селес/Селес.md\|Селес]]                                      | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
+| [[Действующие лица/Долина Ледяного Ветра/Команда Селес/Сол.md\|Сол]]                                          | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
+| [[Действующие лица/Долина Ледяного Ветра/Команда Селес/Фланн.md\|Фланн]]                                      | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
 | [[Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Ацереща.md\|Ацереща]]                               | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
 | [[Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Маления Айнхард.md\|Маления Айнхард]]               | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
 | [[Действующие лица/Долина Ледяного Ветра/Персонажи Шторма/Опус.md\|Опус]]                                     | <ul><li>Долина ледяного ветра</li></ul>                                                                                                                                                                                                                                     |
+| [[Действующие лица/Божества/Гонд.md\|Гонд]]                                                                   | <ul><li>Внешние планы</li><li>Вандерхоум (демиплан)</li></ul>                                                                                                                                                                                                               |
+| [[Действующие лица/Божества/Ссет.md\|Ссет]]                                                                   | <ul><li>Внешние планы</li><li>Бездна</li></ul>                                                                                                                                                                                                                              |
+| [[Действующие лица/Божества/Баал.md\|Баал]]                                                                   | <ul><li>Внешние планы</li></ul>                                                                                                                                                                                                                                             |
 | [[Действующие лица/Врата Бальдура/Персонажи Врат/Ксандр.md\|Ксандр]]                                          | <ul><li>Амн</li><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li></ul>                                                                                                                                                                             |
 | [[Действующие лица/Амн/Велианна Фароу.md\|Велианна Фароу]]                                                    | <ul><li>Амн</li></ul>                                                                                                                                                                                                                                                       |
 | [[Действующие лица/Поместье Рейвентри/Уск.md\|Уск]]                                                           | <ul><li>[[Лор/Локации/Поместье Рейвентри.md\|Поместье Рейвентри]]</li><li>План фей</li><li>План теней</li><li>Материальный план</li></ul>                                                                                                                                  |
@@ -39,20 +41,20 @@
 | [[Действующие лица/Поместье Рейвентри/Иллана Корвинар.md\|Иллана Корвинар]]                                   | <ul><li>[[Лор/Локации/Поместье Рейвентри.md\|Поместье Рейвентри]]</li></ul>                                                                                                                                                                                                |
 | [[Действующие лица/Поместье Рейвентри/Шамбли.md\|Шамбли]]                                                     | <ul><li>[[Лор/Локации/Поместье Рейвентри.md\|Поместье Рейвентри]]</li></ul>                                                                                                                                                                                                |
 | [[Действующие лица/Поместье Рейвентри/Элсиет Корвинар.md\|Элсиет Корвинар]]                                   | <ul><li>[[Лор/Локации/Поместье Рейвентри.md\|Поместье Рейвентри]]</li></ul>                                                                                                                                                                                                |
-| [[Действующие лица/Врата Бальдура/Персонажи Врат/Гайдо Алигьери.md\|Гайдо Алигьери]]                          | <ul><li>[[Лор/Локации/Острова Муншае.md\|Острова Муншае]]</li><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li><li>[[Лор/Локации/Врата Бальдура/Внешний город/Внешний город (заполнить).md\|Внешний город]]</li></ul>                            |
-| [[Действующие лица/Врата Бальдура/Жители Нижнего города/Лиара Портир.md\|Лиара Портир]]                       | <ul><li>[[Лор/Локации/Врата Бальдура/Нижний город/Нижний город (заполнить).md\|Нижний город]]</li><li>[[Лор/Локации/Врата Бальдура/Общие локации/Форт Белуариан (заполнить).md\|Форт Белуариан (заполнить)]]</li></ul>                                                    |
-| [[Действующие лица/Врата Бальдура/Жители Верхнего города/Линта Мур.md\|Линта Мур]]                            | <ul><li>[[Лор/Локации/Врата Бальдура/Нижний город/Нижний город (заполнить).md\|Нижний город]]</li><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li></ul>                                                                                          |
-| [[Действующие лица/Врата Бальдура/Жители Нижнего города/Фауст Кляйн.md\|Фауст Кляйн]]                         | <ul><li>[[Лор/Локации/Врата Бальдура/Нижний город/Нижний город (заполнить).md\|Нижний город]]</li><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li></ul>                                                                                          |
+| [[Действующие лица/Врата Бальдура/Персонажи Врат/Гайдо Алигьери.md\|Гайдо Алигьери]]                          | <ul><li>[[Лор/Локации/Острова Муншае.md\|Острова Муншае]]</li><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li><li>[[Лор/Локации/Врата Бальдура/Внешний город/Внешний город.md\|Внешний город]]</li></ul>                                        |
+| [[Действующие лица/Врата Бальдура/Жители Нижнего города/Лиара Портир.md\|Лиара Портир]]                       | <ul><li>[[Лор/Локации/Врата Бальдура/Нижний город/Нижний город.md\|Нижний город]]</li><li>[[Лор/Локации/Врата Бальдура/Общие локации/Форт Белуариан (заполнить).md\|Форт Белуариан (заполнить)]]</li></ul>                                                                |
+| [[Действующие лица/Врата Бальдура/Жители Верхнего города/Линта Мур.md\|Линта Мур]]                            | <ul><li>[[Лор/Локации/Врата Бальдура/Нижний город/Нижний город.md\|Нижний город]]</li><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li></ul>                                                                                                      |
+| [[Действующие лица/Врата Бальдура/Жители Нижнего города/Фауст Кляйн.md\|Фауст Кляйн]]                         | <ul><li>[[Лор/Локации/Врата Бальдура/Нижний город/Нижний город.md\|Нижний город]]</li><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li></ul>                                                                                                      |
 | [[Действующие лица/Местоположение неизвестно/Уильям Орнест.md\|Уильям Орнест]]                                | <ul><li>[[Лор/Локации/Врата Бальдура/Нижний город/Корабль Аларика.md\|Корабль Аларика]]</li><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li><li>Неизвестно</li></ul>                                                                             |
-| [[Действующие лица/Врата Бальдура/Жители Нижнего города/Джинджер.md\|Джинджер]]                               | <ul><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li><li>[[Лор/Локации/Врата Бальдура/Нижний город/Нижний город (заполнить).md\|Нижний город]]</li><li>Особняк Кляйн</li></ul>                                                                    |
-| [[Действующие лица/Врата Бальдура/Жители Верхнего города/Эрл Наморран.md\|Эрл Наморран]]                      | <ul><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li><li>[[Лор/Локации/Врата Бальдура/Нижний город/Нижний город (заполнить).md\|Нижний город]]</li></ul>                                                                                          |
-| [[Действующие лица/Врата Бальдура/Персонажи Врат/Тори Кляйн.md\|Тори Кляйн]]                                  | <ul><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li><li>[[Лор/Локации/Врата Бальдура/Нижний город/Нижний город (заполнить).md\|Нижний город]]</li></ul>                                                                                          |
+| [[Действующие лица/Врата Бальдура/Жители Нижнего города/Джинджер.md\|Джинджер]]                               | <ul><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li><li>[[Лор/Локации/Врата Бальдура/Нижний город/Нижний город.md\|Нижний город]]</li><li>Особняк Кляйн</li></ul>                                                                                |
+| [[Действующие лица/Врата Бальдура/Жители Верхнего города/Эрл Наморран.md\|Эрл Наморран]]                      | <ul><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li><li>[[Лор/Локации/Врата Бальдура/Нижний город/Нижний город.md\|Нижний город]]</li></ul>                                                                                                      |
+| [[Действующие лица/Врата Бальдура/Персонажи Врат/Тори Кляйн.md\|Тори Кляйн]]                                  | <ul><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li><li>[[Лор/Локации/Врата Бальдура/Нижний город/Нижний город.md\|Нижний город]]</li></ul>                                                                                                      |
 | [[Действующие лица/Врата Бальдура/Меллоу Квин.md\|Меллоу Квин]]                                               | <ul><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li><li>[[Лор/Локации/Врата Бальдура/Нижний город/Корабль Аларика.md\|Корабль Аларика]]</li><li>[[Лор/Локации/Врата Бальдура/Нижний город/Нижний город (заполнить).md\|Нижний город]]</li></ul> |
-| [[Действующие лица/Врата Бальдура/Жители Внешнего города/Дамар.md\|Дамар]]                                    | <ul><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li><li>[[Лор/Локации/Врата Бальдура/Внешний город/Внешний город (заполнить).md\|Внешний город]]</li></ul>                                                                                       |
-| [[Действующие лица/Врата Бальдура/Жители Внешнего города/Девятипалая Кинэ.md\|Девятипалая Кинэ]]              | <ul><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li><li>[[Лор/Локации/Врата Бальдура/Внешний город/Внешний город (заполнить).md\|Внешний город]]</li></ul>                                                                                       |
-| [[Действующие лица/Врата Бальдура/Жители Внешнего города/Джин.md\|Джин]]                                      | <ul><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li><li>[[Лор/Локации/Врата Бальдура/Внешний город/Внешний город (заполнить).md\|Внешний город]]</li></ul>                                                                                       |
-| [[Действующие лица/Врата Бальдура/Жители Внешнего города/Лили.md\|Лили]]                                      | <ul><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li><li>[[Лор/Локации/Врата Бальдура/Внешний город/Внешний город (заполнить).md\|Внешний город]]</li></ul>                                                                                       |
-| [[Действующие лица/Врата Бальдура/Жители Внешнего города/Рильса Раель.md\|Рильса Раель]]                      | <ul><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li><li>[[Лор/Локации/Врата Бальдура/Внешний город/Внешний город (заполнить).md\|Внешний город]]</li></ul>                                                                                       |
+| [[Действующие лица/Врата Бальдура/Жители Внешнего города/Джин.md\|Джин]]                                      | <ul><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li><li>[[Лор/Локации/Врата Бальдура/Внешний город/Внешний город.md\|Внешний город]]</li><li>Таверна "Потрошитель"</li></ul>                                                                     |
+| [[Действующие лица/Врата Бальдура/Жители Внешнего города/Лили.md\|Лили]]                                      | <ul><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li><li>[[Лор/Локации/Врата Бальдура/Внешний город/Внешний город.md\|Внешний город]]</li><li>Таверна "Потрошитель"</li></ul>                                                                     |
+| [[Действующие лица/Врата Бальдура/Жители Внешнего города/Дамар.md\|Дамар]]                                    | <ul><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li><li>[[Лор/Локации/Врата Бальдура/Внешний город/Внешний город.md\|Внешний город]]</li></ul>                                                                                                   |
+| [[Действующие лица/Врата Бальдура/Жители Внешнего города/Девятипалая Кинэ.md\|Девятипалая Кинэ]]              | <ul><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li><li>[[Лор/Локации/Врата Бальдура/Внешний город/Внешний город.md\|Внешний город]]</li></ul>                                                                                                   |
+| [[Действующие лица/Врата Бальдура/Жители Внешнего города/Рильса Раель.md\|Рильса Раель]]                      | <ul><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li><li>[[Лор/Локации/Врата Бальдура/Внешний город/Внешний город.md\|Внешний город]]</li></ul>                                                                                                   |
 | [[Действующие лица/Врата Бальдура/Жители Верхнего города/Белинн Стелмейн.md\|Белинн Стелмейн]]                | <ul><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li><li>[[Лор/Локации/Врата Бальдура/Верхний город/Верхний город.md\|Верхний город]]</li><li>Поместье Стелмейн</li></ul>                                                                         |
 | [[Действующие лица/Врата Бальдура/Жители Верхнего города/Оллин Рахт.md\|Оллин Рахт]]                          | <ul><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li><li>[[Лор/Локации/Врата Бальдура/Верхний город/Верхний город.md\|Верхний город]]</li><li>Поместье Стелмейн</li></ul>                                                                         |
 | [[Действующие лица/Врата Бальдура/Жители Верхнего города/Джедрен Хиллер.md\|Джедрен Хиллер]]                  | <ul><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li><li>[[Лор/Локации/Врата Бальдура/Верхний город/Верхний город.md\|Верхний город]]</li><li>[[Лор/Локации/Врата Бальдура/Верхний город/Районы/Ширь.md\|Ширь]]</li></ul>                        |
@@ -61,14 +63,11 @@
 | [[Действующие лица/Врата Бальдура/Жители Верхнего города/Ульдер Рейвенгард.md\|Ульдер Рейвенгард]]            | <ul><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li><li>[[Лор/Локации/Врата Бальдура/Верхний город/Верхний город.md\|Верхний город]]</li></ul>                                                                                                   |
 | [[Действующие лица/Врата Бальдура/Фессир.md\|Фессир]]                                                         | <ul><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li></ul>                                                                                                                                                                                         |
 | [[Действующие лица/Врата Бальдура/Жители Верхнего города/Имбралим Скунд.md\|Имбралим Скунд]]                  | <ul><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li></ul>                                                                                                                                                                                         |
-| [[Действующие лица/Врата Бальдура/Персонажи Врат/Руб.md\|Руб]]                                                | <ul><li>[[Лор/Локации/Врата Бальдура/Внешний город/Внешний город (заполнить).md\|Внешний город]]</li><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li></ul>                                                                                       |
+| [[Действующие лица/Врата Бальдура/Персонажи Врат/Руб.md\|Руб]]                                                | <ul><li>[[Лор/Локации/Врата Бальдура/Внешний город/Внешний город.md\|Внешний город]]</li><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li></ul>                                                                                                   |
 | [[Действующие лица/Местоположение неизвестно/Миска.md\|Миска]]                                                | <ul><li>[[Лор/Локации/Врата Бальдура/Верхний город/Верхний город.md\|Верхний город]]</li><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li><li>Неизвестно</li></ul>                                                                                |
 | [[Действующие лица/Врата Бальдура/Жители Верхнего города/Гаксилион Труд.md\|Гаксилион Труд]]                  | <ul><li>[[Лор/Локации/Врата Бальдура/Верхний город/Верхний город.md\|Верхний город]]</li><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li></ul>                                                                                                   |
 | [[Действующие лица/Врата Бальдура/Жители Верхнего города/Диллард Портир.md\|Диллард Портир]]                  | <ul><li>[[Лор/Локации/Врата Бальдура/Верхний город/Верхний город.md\|Верхний город]]</li><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li></ul>                                                                                                   |
 | [[Действующие лица/Врата Бальдура/Персонажи Врат/Мирай Стелмейн.md\|Мирай Стелмейн]]                          | <ul><li>[[Лор/Локации/Врата Бальдура/Верхний город/Верхний город.md\|Верхний город]]</li><li>[[Лор/Локации/Врата Бальдура/Врата Бальдура.md\|Врата Бальдура]]</li></ul>                                                                                                   |
-| [[Действующие лица/Божества/Баал.md\|Баал]]                                                                   | \-                                                                                                                                                                                                                                                                          |
-| [[Действующие лица/Божества/Гонд.md\|Гонд]]                                                                   | \-                                                                                                                                                                                                                                                                          |
 | [[Действующие лица/Божества/Мурена.md\|Мурена]]                                                               | \-                                                                                                                                                                                                                                                                          |
-| [[Действующие лица/Божества/Ссет.md\|Ссет]]                                                                   | \-                                                                                                                                                                                                                                                                          |
 | [[Действующие лица/Местоположение неизвестно/Лилит.md\|Лилит]]                                                | \-                                                                                                                                                                                                                                                                          |
 | [[Действующие лица/Поместье Рейвентри/Крин Корвинар.md\|Крин Корвинар]]                                       | \-                                                                                                                                                                                                                                                                          |
