Quartz sync: Aug 20, 2024, 12:53 AM

--- a/content/Действующие лица/Врата Бальдура/Меллоу Квин.md
+++ b/content/Действующие лица/Врата Бальдура/Меллоу Квин.md
@@ -4,11 +4,28 @@ type: Персонаж
 location:
   - "[[Врата Бальдура]]"
   - "[[Корабль Аларика]]"
-  - "[[Нижний город (заполнить)|Нижний город]]"
+  - "[[Нижний город]]"
 race:
   - Табакси
 gender: Ж
 organisation:
   - Команда Аларики
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Меллоу Квин
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | [[Врата Бальдура]],[[Корабль Аларика]],[[Нижний город]] |
+> | Раса | Табакси |
+> | Пол | Ж |
+> | Организация | Команда Аларики |
+> | Статус | Жив(а) |
+
 Знакомая [[Гайдо Алигьери|Гайдо]], раньше навещавшая его в Борделе. Пиратка, весьма известная в этих краях. По договору с Гайдо будет капитаном [[Корабль Аларика|"Аларики"]]
