--- a/content/Действующие лица/Врата Бальдура/Фессир.md
+++ b/content/Действующие лица/Врата Бальдура/Фессир.md
@@ -7,5 +7,21 @@ race:
   - Ворон
 gender: М
 organisation: 
-dead:
+dead: false
 ---
+
+> [!infobox]
+> 
+> ## Фессир
+> 
+> ### Описание
+> 
+> | Тип | Персонаж |
+> | --- | --- |
+> | Другие имена| Нет данных |
+> | Местонахождение | [[Врата Бальдура]] |
+> | Раса | Ворон |
+> | Пол | М |
+> | Организация | Нет данных |
+> | Статус | Жив(а) |
+
